2014-07-31         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep. Mainly white space differences.

	Unrelated:

	* mpfr.c (cleanup_mpfr): New function to deallocate _mpf_t1
	and _mpf_t2; removes some valgrind warnings.
	* awk.h (cleanup_mpfr): Add declaration.
	* main.c (main): Add call to `cleanup_mpfr'.

2014-07-25         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (main): Add a warning message if -M is used and gawk was
	compiled without MPFR/GMP.

2014-07-24         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (usage): Put text for `-n' *after* text for `-m'.
	Report from Robert P. J. Day <rpjday@crashcourse.ca>.

	Fix problems with I/O errors reported by Assaf Gordon
	<assafgordon@gmail.com>:

	* io.c (inrec): Change type to bool to make calling easier. Add
	check in non-EOF case for error, and if so, return false.
	Update ERRNO in case there is an ENDFILE block.
	* awk.h (inrec): Change type in declaration.
	* interpret.h (r_interpret): Change call of inrec() to boolean
	notation.

2014-07-10         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (check_for_bad): New routine to do the fatal message,
	with smarter checking.
	(nextc): Call it as appropriate.

	* builtin.c (format_tree): Add check for bad returns from mbrlen
	to avoid trying to malloc (size_t) -1 bytes. Thanks to
	mail.green.fox@gmail.com for the bug report.

2014-07-03         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (nextc): Add bool check_for_bad parameter to check
	for bad characters in the source program.
	(yylex): Adjust calls.

2014-06-22         Paul Eggert          <eggert@penguin.cs.ucla.edu>

	Bring in from GNULIB:

	regex: fix memory leak in compiler
	Fix by Andreas Schwab in:
	https://sourceware.org/ml/libc-alpha/2014-06/msg00462.html
	* lib/regcomp.c (parse_expression): Deallocate partially
	constructed tree before returning error.

2014-06-19         Arnold D. Robbins     <arnold@skeeve.com>
