@@ -1,5 +1,10 @@
 2014-07-31         Arnold D. Robbins     <arnold@skeeve.com>
 
+	* builtin.c (format_tree): Make %c handling more sane on Windows.
+	Rework the lint messages.
+
+	Unrelated:
+
 	* dfa.c: Sync with GNU grep. Mainly white space differences.
 
 	Unrelated:
